--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,13 +9,13 @@
     <meta name="description" content="A Web Application for managing seats for the bars owners" />
 
     <!-- Open Graph / Social Media -->
-    <meta property="og:title" content="My Vite + React App" />
+    <meta property="og:title" content="Have A Seat" />
     <meta property="og:description" content="A fast React project using Vite" />
     <meta property="og:image" content="/og-image.jpg" />
     <meta property="og:type" content="website" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.svg" />
 
     <!-- Theme Support -->
     <meta name="theme-color" content="#ffffff" />
