chore: Code cleanup

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
 
     <!-- SEO Metadata -->
     <title>Have A Seat</title>
-    <meta name="description" content="A Web Application for managing seats for the bars owners" />
+    <meta name="description" content="A Web Application for managing seats for the place owners" />
 
     <!-- Open Graph / Social Media -->
     <meta property="og:title" content="Have A Seat" />
